# wallpaper-engine-kde-plugin

./: CLAUDE.md  README.md
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules
plugin/contents/config/: main.xml
plugin/contents/ui/: Common.qml  Pyext.qml  WallpaperListModel.qml  config.qml  main.qml
plugin/contents/ui/backend/: QtWebView.qml  Scene.qml  qwebchannel_source.mjs
plugin/contents/ui/js/: utils.mjs
plugin/contents/ui/page/: SettingPage.qml  WallpaperPage.qml
rpm/: README.md  wek.spec
src/: CMakeLists.txt  FileHelper.cpp  FileHelper.hpp  MprisMonitor.cpp  MprisMonitor.hpp  plugin.cpp  qwebchannel.js  qwebchannel.qrc
tests/: CMakeLists.txt  mull.yml  tst_filehelper.cpp  tst_mpriscolors.cpp
